# arc

./: arc-brand-guidelines.md  arc-feature-outline.md  arc-product-description.md  glove-coffee.jsx  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yaml
landing/: package-lock.json  package.json
landing/app/: globals.css  layout.tsx  mock-data.ts  page.tsx
landing/app/actions/: releases.ts
landing/app/components/: app-clone.tsx  download-section.tsx  footer.tsx  hero.tsx  timeline.tsx
scripts/: bump-version.sh  redeploy.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapter.rs  commands.rs  db.rs  lib.rs  main.rs
src/components/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  ConnectionStatus.tsx  CsvImport.tsx  DataTable.tsx  ErrorDisplay.tsx  FeedbackDialog.tsx  Header.tsx  Input.tsx  LoadingState.tsx  Select.tsx  Sidebar.tsx  Tag.tsx  TitleBar.tsx  UpdateNotification.tsx
src/lib/: commands.ts  glove-client.ts  oasis.ts  saved-query-utils.ts  send-message-context.tsx  theme-context.tsx  theme-manager.ts  theme.ts  themes.ts
src/lib/adapters/: anthropic.ts  index.ts  openai-compat.ts  serialize-tools.ts  shared.ts
src/lib/tools/: build-filter.tsx  collect-form.tsx  index.ts  (+19 more)
src/views/: Charts.tsx  Connections.tsx  Explorations.tsx  Notes.tsx  ProjectSelect.tsx  QueryLibrary.tsx  QueryScanner.tsx  SchemaViewer.tsx  Settings.tsx  TableLinks.tsx  WorkspaceHome.tsx
