[package]
name = "arc"
version = "0.2.2"
description = "A conversational database interface"
authors = ["dterminal"]
edition = "2021"

[lib]
name = "arc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1", "array-impls"] }
tokio-postgres-rustls = "0.12"
rustls = "0.23"
webpki-roots = "0.26"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
